--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "coupling-graph": "npx madge --extensions js,jsx,ts,tsx,css,md,mdx ./ --exclude '.next|tailwind.config.js|reset.d.ts|prettier.config.js|postcss.config.js|playwright.config.ts|next.config.js|next-env.d.ts|instrumentation.ts|e2e/|README.md|.storybook/|.eslintrc.js' --image graph.svg"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/jetbrains-mono": "^5.2.8",
+    "@fontsource/space-grotesk": "^5.2.10",
     "@next/bundle-analyzer": "^15.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.3.1",
@@ -41,6 +44,7 @@
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@react-spring/web": "^10.0.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "12.0.0",
     "@semantic-release/git": "^10.0.1",
@@ -50,10 +54,17 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/otel": "^1.12.0",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.25",
+    "gsap": "^3.13.0",
     "lodash": "^4.17.21",
-    "next": "15.3.3",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.556.0",
+    "next": "16.0.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^10.0.0",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.4"
   },
